--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,9 +34,7 @@
             <li class="nav-item">
               <a class="nav-link" href="https://coderivy.github.io/blog/">Blogs</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
+           
           </ul>
           <form class="form-inline mt-2 mt-md-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -55,9 +53,8 @@
 
     <footer class="footer">
       <div class="container">
-        
-								<span class="site-title"><a href="https://coderivy.github.io/blog/">Lan Chen</a></span>
-				<a href="https://github.com">Proudly powered by Github</a>
+          <span class="site-title"><a href="https://coderivy.github.io/blog/">Lan Chen</a></span>
+	  <a href="https://github.com"> / Proudly powered by Github</a>
 		
       </div>
     </footer>
