--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
     <header>
       <!-- Fixed navbar -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="https://coderivy.github.io/blog/">Blogs</a>
+        <a class="navbar-brand" href="https://coderivy.github.io/index.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,7 +31,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
             </li>
-           
+           <li class="nav-item active">
+              <a class="nav-link" href="https://coderivy.github.io/blog/">Blogs <span class="sr-only">(current)</span></a>
+            </li>
            
           </ul>
           <form class="form-inline mt-2 mt-md-0">
