--- a/assets/twitter/stylesheets/style.css
+++ b/assets/twitter/stylesheets/style.css
@@ -82,3 +82,11 @@ html, body {
   border:1px solid #4C964D;
   color:#FFF;
 }
+
+/* Lan added for increase post's font size - 20190625 */
+p {
+  margin: 0 0 9px;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 1.2em;
+  line-height: 1.6em;
+}
