--- a/assets/twitter/layouts/post.html
+++ b/assets/twitter/layouts/post.html
@@ -2,11 +2,12 @@
 layout : default
 ---
 <div class="page-header">
-  <h1>{{ page.title }} {{# page.tagline }} <small>{{ . }}</small>{{/ page.tagline }}</h1>
+  <h1 style="margin-bottom: 10px;">{{ page.title }} {{# page.tagline }} <small>{{ . }}</small>{{/ page.tagline }}</h1>
+  <span><a href="/about">By Lan Chen</a> <a class="inactiveLink"> / {{ date }}</a></span><br /><br />
 </div>
 
 <div class="row">
-  <div class="span8">
+  <div class="span10">
     {{{ content }}}
     <hr>
     <div class="pagination">
@@ -34,7 +35,7 @@ layout : default
     {{{ comments }}}
   </div>
   
-  <div class="span4">
+  <div class="span2">
     <h4>Published</h4>
     <div class="date"><span>{{ page.date }}</span></div>
     <br>
