--- a/assets/twitter/stylesheets/style.css
+++ b/assets/twitter/stylesheets/style.css
@@ -30,25 +30,26 @@ html, body {
 
 /* Page header tweaks */
 .page-header {
-  background-color: #f5f5f5;
-  padding: 20px 20px 10px;
-  margin: -20px -20px 20px;
+  padding: 20px 20px 0px;
+  margin: -20px -20px 5px;
 }
 
 /* posts index */
-.post > h3.title {
+.post > p.title {
   position:relative;
   padding-top:10px;
-  border-top:3px solid #eee;
+  border-top:1px solid #eee;
+  font-size:1.8em;
 }
-.post > h3.title span.date { 
+.post > p.title span.date { 
   position:absolute;
-  right:0;
+  right:50px;
   font-size:0.9em;
 }
 .post > .more {
-  margin:10px 0;
+  margin:20px 0 40px 0;
   text-align:left;
+  font-size: 1.1em;
 }
 
 /* tag_box ======================================================== */
@@ -85,8 +86,14 @@ html, body {
 
 /* Lan added for increase post's font size - 20190625 */
 p {
-  margin: 0 0 9px;
+  margin: 0 0 0px;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 1.2em;
   line-height: 1.6em;
+}
+
+.inactiveLink {
+  pointer-events: none;
+  cursor: default;
+  font-size: 1em;
 }
