--- a/assets/twitter/layouts/default.html
+++ b/assets/twitter/layouts/default.html
@@ -42,12 +42,12 @@
 
     <div class="container">
 
-      <div class="content">
+      <div class="content" style="padding-right: 5%; padding-left: 5%;">
         {{{ content }}}
       </div>
 
       <footer>
-        <p>&copy; {{ site.author.name }} 2019 
+        <p>&copy; {{ site.author.name }} 2020 
           with help from <a href="http://github.com/wendal/gor" target="_blank" title="Gor -- Fast Blog">Gor</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
 		  and Idea from <a href="http://ruhoh.com" target="_blank" title="The Definitive Technical Blogging Framework">ruhoh</a>
