--- a/assets/twitter/layouts/post.html
+++ b/assets/twitter/layouts/post.html
@@ -1,13 +1,13 @@
 ---
 layout : default
 ---
-<div class="page-header">
-  <h1 style="margin-bottom: 10px;">{{ page.title }} {{# page.tagline }} <small>{{ . }}</small>{{/ page.tagline }}</h1>
+<div class="page-header" style="padding-top: 5%; padding-left: 5%;">
+  <h1 >{{ page.title }} {{# page.tagline }} <small>{{ . }}</small>{{/ page.tagline }}</h1>
   <span><a href="/about">By Lan Chen</a> <a class="inactiveLink"> / {{ date }}</a></span><br /><br />
 </div>
 
-<div class="row">
-  <div class="span10">
+<div class="row" >
+  <div class="span11" style="display: flex; flex-direction: column; justify-content: center; padding: 3%;">
     {{{ content }}}
     <hr>
     <div class="pagination">
@@ -32,10 +32,10 @@ layout : default
       </ul>
     </div>
     <hr>
-    {{{ comments }}}
+    <!-- {{{ comments }}} -->
   </div>
   
-  <div class="span2">
+  <!-- <div class="span2">
     <h4>Published</h4>
     <div class="date"><span>{{ page.date }}</span></div>
     <br>
@@ -53,4 +53,4 @@ layout : default
     {{/ page.tags?to_tags }}
     </ul>
   </div>
-</div>
+</div> -->
